small fix to about-me image (overflow))

--- a/styles.css
+++ b/styles.css
@@ -83,6 +83,7 @@ main {
     height: auto;
     margin-top: 0px; 
     text-align: left;
+    overflow: hidden;
 }
 
 #about-container {
